--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1077,7 +1077,7 @@ a {
 }
 .cid-sPw3Ie2nFS .mbr-text,
 .cid-sPw3Ie2nFS .mbr-section-btn {
-  color: #e43f3f;
+  color: #ffffff;
 }
 .cid-sPw5dxq5Pr {
   padding-top: 30px;
